Fix coverage support for RubyVM::ISeq.compile

[Bug #22018]

ISeq returned by `RubyVM::InstructionSequene.load_iseq` weren't
handled by the coverage module.